Fix code and pre rendering in dark mode

--- a/src/_Dark.sass
+++ b/src/_Dark.sass
@@ -31,7 +31,9 @@ $color-primary-dark: color.scale($color-primary, $lightness: 15%)
   input[type='week'],
   input:not([type]),
   textarea,
-  select
+  select,
+  code,
+  pre
     color: var(--color-quaternary)
     background-color: var(--color-secondary)
 
